# recoverable-vla-lora-stacking

./: .gitignore  README.md  lora_stacking.py  pyproject.toml  test_lora_stacking.py
control_scripts/: 01_setup_env.sh  02_download_model_and_data.sh  03_test_inference.py  04_eval_libero.sh  05_visual_inference.py  06_visual_inference_video.py  07_calibrate_so101.sh  08_teleoperate_so101.sh  09_record_data.sh  10_policy_server.sh  11_robot_client.sh  12_deploy_pick_letter.sh  13_monitor_wrist_roll.sh  14_train_act_pick_letter.sh  15_deploy_act_pick_letter.sh  15_monitor_act_pick_and_place.sh  16_monitor_deploy_diagnostics.sh  17_so101_camera_soak_test.sh  18_preview_so101_cameras.sh  19_preview_camera_indices.sh  20_monitor_teleop_fps.sh  21_monitor_record_fps.sh  22_deploy_act_pick_and_place_responsive.sh  22_disable_usb_power_save.sh  23_deploy_act_pick_and_place_old_params.sh  24_record_cuhk_pick_place_slots.sh  25_deploy_openpi_pi05_so101.sh  26_check_so101_start_pose.py  27_record_cuhk_recovery_putback.sh  28_record_cuhk_stage25_random_c.sh  29_record_cuhk_stage25_random_letter.sh  32_auto_continue_stage2_to_50k.sh  33_record_cuhk_stage3_swap_recovery.sh  34_emergency_stop_so101.sh  35_record_cuhk_stage3_triple_recovery.sh  36_train_openpi_stage3_recovery_mix.sh  37_build_stage35_recovery_1x3_dataset.sh  38_train_openpi_stage35_recovery_1x3.sh  39_build_stage3_curated_swap_x2_dataset.sh  40_train_openpi_stage3_curated_swap_x2.sh  (+13 more)
recoverable_vla_lora_stacking/: __init__.py  lora_stacking.py
scripts/: deploy_openpi_so101.sh  openpi_so101_client.py  record_data.sh  (+7 more)
(+5 files in other folders)
